Izmene u index.html i dodavanje OG slike

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-  <head>
+  <!-- <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Express web</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-  </head>
+  </head> -->
+  <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title -->
+  <title>Express Web – Izrada sajtova i poslovnih rešenja | Prezentacije, e-commerce, ERP, SaaS</title>
+
+  <!-- Primary Meta Description -->
+  <meta name="description" content="Express Web – izrada svih vrsta prezentacija: od jednostavnih i povoljnih do složenih, naprednih programabilnih rešenja. Online prodavnice, multi-vendor sistemi, ERP i SaaS rešenja." />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.express-web.express/" />
+
+  <!-- (Optional) Keywords -->
+  <meta name="keywords" content="izrada sajtova, web prezentacije, online prodavnica, multi-vendor, ERP, SaaS, Express Web" />
+
+  <!-- Open Graph (FB/LinkedIn/WhatsApp/Slack…) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Express Web" />
+  <meta property="og:title" content="Express Web – Izrada sajtova i poslovnih rešenja" />
+  <meta property="og:description" content="Prezentacije, e-commerce, multi-vendor, ERP i SaaS. Od brzih rešenja do naprednih, programabilnih sistema." />
+  <meta property="og:url" content="https://www.express-web.express/" />
+  <meta property="og:locale" content="sr_RS" />
+  <!-- Postavi stvarnu sliku 1200x630 -->
+  <meta property="og:image" content="https://www.express-web.express/images/og-image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card (koriste ga i drugi klijenti za preview) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Express Web – Izrada sajtova i poslovnih rešenja" />
+  <meta name="twitter:description" content="Prezentacije, e-commerce, multi-vendor, ERP i SaaS. Od brzih rešenja do naprednih, programabilnih sistema." />
+  <meta name="twitter:image" content="https://www.express-web.express/images/og-image.jpg" />
+
+  <!-- UI/brand sitnice -->
+  <meta name="theme-color" content="#0f172a" />
+
+  <!-- Icons / CSS -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
+
   <body class="font-inter antialiased bg-slate-900 text-slate-100 tracking-tight">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
