Izmene na Frontendu01

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,10 @@
 
   <body class="font-inter antialiased bg-slate-900 text-slate-100 tracking-tight">
     <div id="app"></div>
+    <script>
+        window.__API_BASE_URL = '/api';
+        window.__WEB_BASE_URL = '/';
+    </script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
