Dodavanje Google oznaka za nalog

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,15 @@
   <!-- Title -->
   <title>Express Web – Izrada sajtova i poslovnih rešenja | Prezentacije, e-commerce, ERP, SaaS</title>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17494737435"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17494737435');
+  </script>
+
   <!-- Primary Meta Description -->
   <meta name="description" content="Express Web – izrada svih vrsta prezentacija: od jednostavnih i povoljnih do složenih, naprednih programabilnih rešenja. Online prodavnice, multi-vendor sistemi, ERP i SaaS rešenja." />
   <meta name="robots" content="index,follow" />
